Add tests back.